	  specifying exactly what you want to be logged.  The format is
	  "[silent|normal|verbose|debug] flags", where flags is a space
	  separated list of flags. At the moment, only the flags
	  +callsite and +callstack are supported; these report the
	  call site/stack of a logging output respectively (these
	  are only supported if Cabal is built with GHC 8.0/7.10.2
	  or greater, respectively).

1.24.0.0 Ryan Thomas <ryan@ryant.org> March 2016
	* Support GHC 8.
	* Deal with extra C sources from preprocessors (#238).
	* Include cabal_macros.h when running c2hs (#2600).
	* Don't recompile C sources unless needed (#2601).
	* Read 'builddir' option from 'CABAL_BUILDDIR' environment variable.
	* Add '--profiling-detail=$level' flag with a default for libraries
	  and executables of 'exported-functions' and 'toplevel-functions'
	  respectively (GHC's '-fprof-auto-{exported,top}' flags) (#193).
	* New 'custom-setup' stanza to specify setup deps. Setup is also built
	  with the cabal_macros.h style macros, for conditional compilation.
	* Support Haddock response files (#2746).
	* Fixed a bug in the Text instance for Platform (#2862).
	* New 'setup haddock' option: '--for-hackage' (#2852).
	* New --show-detail=direct; like streaming, but allows the test
	  program to detect that is connected to a terminal, and works
	  reliable with a non-threaded runtime (#2911, and serves as a
	  work-around for #2398)
	* Library support for multi-instance package DBs (#2948).
	* Improved the './Setup configure' solver (#3082, #3076).
	* The '--allow-newer' option can be now used with './Setup
	configure' (#3163).
	* Added a way to specify extra locations to find OS X frameworks
	in ('extra-framework-dirs'). Can be used both in .cabal files and
	as an argument to './Setup configure' (#3158).
	* Macros 'VERSION_$pkgname' and 'MIN_VERSION_$pkgname' are now
	also generated for the current package. (#3235).

1.22.0.0 Johan Tibell <johan.tibell@gmail.com> January 2015
	* Support GHC 7.10.